<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

        <CheckBox
            android:id="@+id/settings_auto_nav_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/automatic_navigation"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/themes"
            android:layout_marginTop="20dp"
            android:textSize="20sp"/>

        <RadioGroup
            android:id="@+id/theme_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/dark_theme_radio_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dark_theme"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/light_theme_radio_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light_theme"
                    android:textSize="20sp" />

        </RadioGroup>

        <Button
            android:id="@+id/setting_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="250dp"
            android:minWidth="170dp"
            android:textColor="#eeffffff"
            android:background="@drawable/basic_button"/>

</LinearLayout>