<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFFFFF"
        android:padding="10dp"
        android:layout_gravity="end"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/history_edit_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_edit_date_label"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/edit_popup_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/history_edit_message_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_edit_message_label"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/edit_popup_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/history_edit_notes_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_edit_notes_label"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_popup_notes"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textColor="@color/darkThemeColorPrimary"
            android:textAlignment="textStart"
            android:gravity="start"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <Button
                android:id="@+id/edit_popup_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:textColor="#eeffffff"
                android:background="@drawable/basic_button"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp" />

            <Button
                android:id="@+id/edit_popup_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="#eeffffff"
                android:background="@drawable/basic_button"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>