<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/back_grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="180dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_horizontal">

        <LinearLayout
            android:id="@+id/result_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/result_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/result_title"
                android:textSize="25sp"
                />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>

            <TextView
                android:id="@+id/result_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/no_result_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/no_result_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_result_title"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/no_result_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_result_message"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textSize="18sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/result_buttons_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/try_again_result_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            android:visibility="gone"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="100dp"
            android:minWidth="170dp"
            android:textColor="#eeffffff"
            android:background="@drawable/basic_button"
            android:textAllCaps="false"/>

        <LinearLayout
            android:id="@+id/positive_result_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/copy_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_copy_white"
                android:layout_margin="20dp"
                android:background="@drawable/basic_button"
                android:tint="@color/darkThemeColorAccent"/>

            <ImageButton
                android:id="@+id/share_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_share_white"
                android:layout_margin="20dp"
                android:background="@drawable/basic_button"
                android:tint="@color/darkThemeColorAccent"/>

            <ImageButton
                android:id="@+id/open_in_browser_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_open_in_browser_white"
                android:layout_margin="20dp"
                android:background="@drawable/basic_button"
                android:tint="@color/darkThemeColorAccent"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>